--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -1,11 +1,12 @@
 name: Build gateway Docker image
-
 on:
   push:
-    branches: [main]
+    branches: ['feat/redis-gateway']
     paths:
-      - 'gateway/**'
-      - 'proto/**'
+    - 'Myriad/**'
+    - 'PluralKit.Bot/**'
+    - 'PluralKit.Core/**'
+    - 'services/gateway_worker/**'
 
 jobs:
   deploy:
@@ -25,11 +26,10 @@ jobs:
         with:
           # https://github.com/docker/build-push-action/issues/378
           context: .
-          file: gateway/Dockerfile
+          file: services/gateway_worker/Dockerfile
           push: true
           tags: |
             ghcr.io/pluralkit/gateway:${{ env.BRANCH_NAME }}
             ghcr.io/pluralkit/gateway:${{ github.sha }}
-            ghcr.io/pluralkit/gateway:latest
           cache-from: type=registry,ref=ghcr.io/pluralkit/gateway:${{ env.BRANCH_NAME }}
           cache-to: type=inline
